tests/fail/elaboration/boolean-literal/type-mismatch.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/boolean-literal/type-mismatch.fathom:3:1
  │
3 │ true : Void
  │ ^^^^ type mismatch, expected `Bool`, found `Void`
  │
  = expected `Bool`
       found `Void`

'''
